# hri_projects_2024

IntroToSpatial/: CMakeLists.txt  package.xml
intro_to_spatial/: CMakeLists.txt  package.xml
intro_to_spatial/scripts/: obstacle_avoidance_advanced.py  obstacle_avoidance_basic.py  square_movement.py
spatial_interaction/scripts/: figure_eight_movement.py  gesture_toward_hand.py  join_group.py  joint_demo.py  listener.py  sensor_reader.py  triangle_movement.py
speech_gestures/: CMakeLists.txt  package.xml
speech_gestures/scripts/: SpeechCommandGesture.py  SpeechRepeater.py  TtsAndGesture.py
week0/: CMakeLists.txt  package.xml
week0/scripts/: listener.py  talker.py
week2/launch/: nao_sim.launch
week3/scripts/: joint_demo.py
week4/scripts/: adjust_head_node.py  look_in_hand_direction.py  tf_look_at_hand.py
week9/: obstacle_avoidance_move_toward_goal.py
