<?xml version="1.0"?>
<package format="2">
  <name>spatial_interaction</name>
  <version>0.0.1</version>
  <description>The spatial_interaction package</description>

  <!-- Maintainer information -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- License -->
  <license>BSD</license>

  <!-- URL for more information -->
  <url type="website">http://wiki.ros.org/spatial_interaction</url>

  <!-- Author information -->
  <author email="your_email@example.com">Your Name</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <!-- Export other information -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

